# Study

Gravitational RMPS/: Density Matrix Calc.nb  Plot.nb  Schmidt Coefficients.tex
Gravitational RMPS/RMPS/: CMakeLists copy.txt  CMakeLists.txt  build.bat
Gravitational RMPS/RMPS/include/: HermitianMatrix.h  MatrixLib.h  RMPSLib.h
Gravitational RMPS/RMPS/src/: RMPSLib.cpp  main.cpp
Higgs and SMEFT/: 241017.pptx  A light particle loop-effect on heavy particle propagator.aux  A light particle loop-effect on heavy particle propagator.nav  A light particle loop-effect on heavy particle propagator.out  A light particle loop-effect on heavy particle propagator.tex  A light particle loop-effect on heavy particle propagator.toc  A light particle loop-effect on heavy particle propagator.vrb  Broad Resonance.aux  Broad Resonance.tex  Field Strength Renormalisation.aux  Field Strength Renormalisation.tex  Field-Space Manifold and Scattering Amplitudes.aux  Field-Space Manifold and Scattering Amplitudes.tex  Four Fermi.aux  Four Fermi.tex  Hypothesis testing.aux  Hypothesis testing.blg  Hypothesis testing.out  Hypothesis testing.tex  In-resonance decay channel detection.aux  In-resonance decay channel detection.tex  Light particles 2.nb  Light particles 3.nb  Light particles.nb  Luminosity estimation.pptx  Many mother particles.nb  One Loop Scheme Independence.aux  One Loop Scheme Independence.out  One Loop Scheme Independence.tex  Positivity Bounds and SMEFT recent works.pptx  Positivity of Dim-6 Operators.pptx  Resonance Shape 3.nb  Resonance Shape 4.nb  Resonance Shape.nb  Scheme independence_fermion.nb  Scheme independence_photon.nb  Scheme independence_scalar.nb  Signal Fit Estimation - Copy.nb  Signal Fit Estimation.nb  Spinning Sum Rules.aux  (+8 more)
Higgs_Effective_Couplings_FormFact/: ._parameters.py  ._particles.py  model.pkl
QED_Higgs_Portal/: __init__.py  coupling_orders.py  couplings.py  decays.py  lorentz.py  parameters.py  (+2 more)
(+174 files in other folders)
